--- a/Bookinist/appsettings.json
+++ b/Bookinist/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Database": {
+  "Data": {
     "Type": "MSSQL",
     "ConnectionStrings": {
       "MSSQL": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Bookinist.db;Integrated Security=True",
