--- a/Bookinist/Bookinist.csproj
+++ b/Bookinist/Bookinist.csproj
@@ -33,4 +33,10 @@
     <ProjectReference Include="..\Bookinist.DAL\Bookinist.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
