--- a/Bookinist.DAL/Bookinist.DAL.csproj
+++ b/Bookinist.DAL/Bookinist.DAL.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bookinist.Interfaces\Bookinist.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
