--- a/Bookinist/Bookinist.csproj
+++ b/Bookinist/Bookinist.csproj
@@ -12,6 +12,8 @@
     <Folder Include="Infrastructure\Commands\" />
     <Folder Include="Models\" />
     <Folder Include="Data\" />
+    <Folder Include="Templates\" />
+    <Folder Include="Styles\" />
     <Folder Include="Services\interfaces\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
