Отображение разных статистических данных

--- a/Bookinist/Bookinist.csproj
+++ b/Bookinist/Bookinist.csproj
@@ -12,6 +12,7 @@
     <Folder Include="Infrastructure\Commands\" />
     <Folder Include="Models\" />
     <Folder Include="Data\" />
+    <Folder Include="Service\" />
     <Folder Include="Templates\" />
     <Folder Include="Styles\" />
     <Folder Include="Services\interfaces\" />
