--- a/Bookinist/Bookinist.csproj
+++ b/Bookinist/Bookinist.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Folder Include="Infrastructure\Commands\" />
+    <Folder Include="Infrastructure\DebugServices\" />
     <Folder Include="Models\" />
     <Folder Include="Data\" />
     <Folder Include="Service\" />
